--- a/_includes/list-people.html
+++ b/_includes/list-people.html
@@ -200,7 +200,7 @@
             {% endif %}
             {% assign affiliationNumbers = person.affiliations.size | minus: 1 %}
             {% for counter in (0..affiliationNumbers) %}
-                {% if person.affiliations[counter].unit == "Security & Trust" or person.affiliations[counter].unit == "Center for Cybersecurity" %}
+                {% if person.affiliations[counter].unit == "Applied Cryptography" or person.affiliations[counter].unit == "Robust and Secure Distributed Computing" or person.affiliations[counter].unit == "Security & Trust" or person.affiliations[counter].unit == "Center for Cybersecurity" %}
                     {% if person.affiliations[counter].institution == "Fondazione Bruno Kessler" %}
                         {% assign role = person.affiliations[counter].role %}
                     {% endif %}        
@@ -263,7 +263,7 @@
                     <div class="card-content">
                         {% if person.name and person.surname %}<p class="title is-spaced is-5">{{ person.name }} {{ person.surname }}</p>{% endif %}
                         {% if role and details contains "role" %}<p class="subtitle role is-4">{{ role }}</p>{% endif %}
-                        {% if type %}<p class="subtitle role is-4">{{ type }}</p>{% endif %}
+                        {% if type %}<p class="subtitle type is-4">{{ type }}</p>{% endif %}
                         {% if details contains "unit" or details contains "institution" or details contains "place" %}
                             {% for affiliation in person.affiliations %}
                                 <div class="affiliation{% if person.affiliations.size > 1 %} more{% endif %}">
