--- a/_includes/list-internships.html
+++ b/_includes/list-internships.html
@@ -9,7 +9,8 @@
 {% endif %}
 
 {% assign peopleList = "" | split: "" %}
-{% for file in site.data.people %}
+{% assign peopleFilesList = site.data.people | sort %}
+{% for file in peopleFilesList %}
     {% for person in file[1] %}
         {% assign peopleList = peopleList | push: person %}
     {% endfor %}
