--- a/_includes/list-people.html
+++ b/_includes/list-people.html
@@ -4,7 +4,8 @@
 {% assign style = include.style %}
 
 {% assign peopleList = "" | split: "" %}
-{% for file in site.data.people %}
+{% assign peopleFilesList = site.data.people | sort %}
+{% for file in peopleFilesList %}
     {% for person in file[1] %}
         {% assign peopleList = peopleList | push: person %}
     {% endfor %}
