--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 {% assign peopleList = "" | split: "" %}
-{% for file in site.data.people %}
+{% assign peopleFilesList = site.data.people | sort %}
+{% for file in peopleFilesList %}
     {% for person in file[1] %}
         {% assign peopleList = peopleList | push: person %}
     {% endfor %}
