Add field in units for visibility in homepage

--- a/_includes/list-units.html
+++ b/_includes/list-units.html
@@ -13,7 +13,9 @@
 <div class="columns is-multiline">
     {% assign units = "" | split: "" %}
     {% for unit in source %}
-        {% assign units = units | push: unit %}
+        {% if unit.visible %}
+            {% assign units = units | push: unit %}
+        {% endif %}
     {% endfor %}
 
     {% if sort %}
