--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -40,6 +40,7 @@
   height: 100%;
   -webkit-box-shadow: 0 .5em 1em -.125em rgba(10,10,10,0.1),0 0px 0 1px rgba(10,10,10,0.02);
   -moz-box-shadow: 0 .5em 1em -.125em rgba(10,10,10,0.1),0 0px 0 1px rgba(10,10,10,0.02);
+  border-radius: 20px;
 }
 
 .card:hover {
@@ -52,7 +53,6 @@
   font-size: 1rem;
 }
 
-.card.person,
 .card.project,
 .card.unit {
   padding-top: 1.3em;
@@ -76,6 +76,11 @@
   opacity: 0.3;
 }
 
+.card-image:first-child img {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
 .card.enterprise .card-image,
 .card.project .card-image {
   padding: 20px;
@@ -97,11 +102,25 @@
   content: url("/assets/images/logos/CS.png");
 }
 
-.card.person .card-image img,
+.card.person .card-image img {
+  border-radius: 20px;
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+
 .card.unit .card-image img {
-  border-radius: 15px;
+  border-radius: 20px;
   width: auto;
   max-height: 96px;
+}
+
+@media (max-width: 768px) {
+  .card.person .card-image img {
+    margin-top: 30px;
+    width: 66%;
+    max-width: 200px;
+  }
 }
 
 .card.person .card-content,
