--- a/_includes/list-people.html
+++ b/_includes/list-people.html
@@ -232,7 +232,7 @@
         {% endif %}
 
         {% if style == "card" %}
-            <div class="column is-{% if cols %}{{ cols }}{% else %}3{% endif %}-desktop is-4-tablet">
+            <div class="column is-{% if cols %}{{ cols }}{% else %}one-fifth{% endif %}-desktop is-4-tablet">
                 <div class="card person">
                     {% if details contains "picture" %}
                         {% assign staticImageName = person.id | append: ".jpg" %}
@@ -244,10 +244,10 @@
                         {% elsif person.image %}
                             {% assign personImage = person.image %}
                         {% elsif person.usernameFBK %}
-                            {% capture personImage %}https://my.fbk.eu/fbk-api/v2/picture/{{ person.usernameFBK }}?w=200{% endcapture %}
+                            {% capture personImage %}https://my.fbk.eu/fbk-api/v2/picture/{{ person.usernameFBK }}?w=500{% endcapture %}
                         {% elsif person.email %}
                             {% if splitEmail[1] == "fbk.eu" %}
-                                {% capture personImage %}https://my.fbk.eu/fbk-api/v2/picture/{{ splitEmail[0] }}?w=200{% endcapture %}
+                                {% capture personImage %}https://my.fbk.eu/fbk-api/v2/picture/{{ splitEmail[0] }}?w=500{% endcapture %}
                             {% else %}
                                 {% capture personImage %}/assets/images/no-user.jpg{% endcapture %}
                             {% endif %}
