--- a/_includes/list-units.html
+++ b/_includes/list-units.html
@@ -1,5 +1,6 @@
 {% assign source = include.source %}
 {% assign sort = include.sort %}
+{% assign cols = include.cols %}
 
 {% assign peopleList = "" | split: "" %}
 {% assign peopleFilesList = site.data.people | sort %}
@@ -37,7 +38,7 @@
             {% endif %}
         {%- endif -%}
         
-        <div class="column is-4-desktop is-4-tablet">
+        <div class="column is-{% if cols %}{{ cols }}{% else %}one-fifth{% endif %}-desktop is-4-tablet">
             {% if unit.website %}
                 <a href="{{ unit.website }}">
                     {% endif %}
