--- a/_includes/list-people.html
+++ b/_includes/list-people.html
@@ -35,15 +35,15 @@
             {% if personFromIdWithAffiliation.size > 0 %}
                 {% assign peopleFromId = peopleFromId | push: personFromIdWithAffiliation[0] %}
             {% else %}
-            {% assign peopleFromId = peopleFromId | push: personFromId[0] %}
+                {% assign peopleFromId = peopleFromId | push: personFromId[0] %}
             {% endif %}
         {% elsif personFromIdLabel.size > 0 %}
             {% assign personFromIdLabelWithAffiliation = personFromIdLabel | where_exp: "person", "person.affiliations.size > 0" %}
             {% if personFromIdLabelWithAffiliation.size > 0 %}
                 {% assign peopleFromId = peopleFromId | push: personFromIdLabelWithAffiliation[0] %}
             {% else %}
-            {% assign peopleFromId = peopleFromId | push: personFromIdLabel[0] %}
-        {% endif %}
+                {% assign peopleFromId = peopleFromId | push: personFromIdLabel[0] %}
+            {% endif %}
         {% endif %}
     {% endfor %}
 
@@ -205,19 +205,12 @@
         {% endif %}
 
         {% assign currentRole = nil %}
-        {% assign role = nil %}
         {% if details contains "currentRole" or details contains "role" %}
             {% if person.affiliations.size > 0 %}
                 {% assign currentRole = "now " %}
             {% endif %}
             {% assign affiliationNumbers = person.affiliations.size | minus: 1 %}
             {% for counter in (0..affiliationNumbers) %}
-                {% if person.affiliations[counter].unit == "Applied Cryptography" or person.affiliations[counter].unit == "Robust and Secure Distributed Computing" or person.affiliations[counter].unit == "Security & Trust" or person.affiliations[counter].unit == "Center for Cybersecurity" %}
-                    {% if person.affiliations[counter].institution == "Fondazione Bruno Kessler" %}
-                        {% assign role = person.affiliations[counter].role %}
-                    {% endif %}        
-                {% endif %}
-
                 {% assign currentRole = currentRole | append: person.affiliations[counter].role %}
                 {% assign nextCounter = counter | plus: 1 %}
                 {% if person.affiliations[counter].institution == person.affiliations[nextCounter].institution %}
@@ -274,28 +267,28 @@
                     {% endif %}
                     <div class="card-content">
                         {% if person.name and person.surname %}<p class="title is-spaced is-5">{{ person.name }} {{ person.surname }}</p>{% endif %}
-                        {% if role and details contains "role" %}<p class="subtitle role is-4">{{ role }}</p>{% endif %}
                         {% if type %}<p class="subtitle type is-4">{{ type }}</p>{% endif %}
-                        {% if details contains "unit" or details contains "institution" or details contains "place" %}
+                        {% if details contains "role" or details contains "unit" or details contains "institution" or details contains "place" %}
                             {% for affiliation in person.affiliations %}
                                 <div class="affiliation{% if person.affiliations.size > 1 %} more{% endif %}">
+                                    {% if affiliation.role and details contains "role" %}<p class="subtitle affiliation role is-4">{{ affiliation.role }}</p>{% endif %}
                                     {% if affiliation.unit and details contains "unit" %}<p class="subtitle affiliation unit is-4">{{ affiliation.unit }}</p>{% endif %}
                                     {% if affiliation.institution and details contains "institution" %}<p class="subtitle affiliation institution is-4">{{ affiliation.institution }}</p>{% endif %}
                                     {% if affiliation.place and details contains "place" %}<p class="subtitle affiliation place is-4">{{ affiliation.place }}</p>{% endif %}
                                 </div>
                             {% endfor %}
-                        {% elsif details contains "internalUnit" %}
+                        {% elsif details contains "internalRole" or details contains "internalUnit" %}
                             {% for affiliation in person.affiliations %}
                                 {% if affiliation.institution == "Fondazione Bruno Kessler" %}
                                     <div class="affiliation">
-                                        <p class="subtitle affiliation unit is-4">{{ affiliation.unit }}</p>
+                                        {% if details contains "internalRole" %}<p class="subtitle affiliation role is-4">{{ affiliation.role }}</p>{% endif %}
+                                        {% if details contains "internalUnit" %}<p class="subtitle affiliation unit is-4">{{ affiliation.unit }}</p>{% endif %}
                                     </div>
                                 {% endif %}
                             {% endfor %}
                         {% endif %}
                         {% if institution %}<p class="subtitle institution is-4">{{ institution }}</p>{% endif %}
                         {% if formerRole %}<p class="subtitle former-role is-4">{{ formerRole }}</p>{% endif %}
-                        {% if currentRole and details contains "currentRole" %}<p class="subtitle current-role is-4">{{ currentRole }}</p>{% endif %}
                         {% if additionalInfo.topic and details contains "topic" %}<p class="subtitle topic is-4">{{ additionalInfo.topic }}</p>{% endif %}
                         {% if thesis.title and details contains "thesis" %}<p class="subtitle thesis is-4">Thesis: {{ thesis.title }}</p>{% endif %}
                         <div class="links">
