--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -110,7 +110,6 @@
 }
 
 .card.unit .card-image img {
-  border-radius: 20px;
   width: auto;
   max-height: 96px;
 }
@@ -935,8 +934,18 @@ table.bordered tr td {
   color: #FFF;
 }
 
+.tag.tag-daisy {
+  background-color: #7cb9e8;
+  color: #FFF;
+}
+
 .tag.tag-rising {
   background-color: #3e7da6;
+  color: #FFF;
+}
+
+.tag.tag-safeware {
+  background-color: #f4a261;
   color: #FFF;
 }
 
