--- a/_includes/list-internships.html
+++ b/_includes/list-internships.html
@@ -174,6 +174,32 @@
             {%- endif -%}
 
 
+            {% assign notes = "" | split: "" %}
+            {% if project.notes %}
+                {% if project.notes | first %}
+                    {% for note in project.notes %}
+                        {% assign notes = notes | push: note %}
+                    {% endfor %}
+                {% else %}
+                    {% assign notes = notes | push: project.notes %}
+                {% endif %}
+            {% endif %}
+
+            {%- assign notesString = nil -%}
+            {%- if notes.size == 1 -%}
+                {%- assign notesString = notes[0] | prepend: "<p><b>Notes:</b> " | append: "</p>" -%}
+            {%- else -%}
+                {% capture notesString %}
+                    <p style="margin-bottom: 5px;"><b>Notes:</b></p>
+                    <ul style="margin-top: 0px;">
+                    {% for note in notes %}
+                        <li>{{ note }}</li>
+                    {% endfor %}
+                    </ul>
+                {% endcapture %}
+            {%- endif -%}
+
+
             {% assign topics = "" | split: "" %}
             {% if project.topics %}
                 {% if project.topics | first %}
@@ -292,7 +318,7 @@
                 {% if project.prerequisites %}{{ prerequisitesString }}{% endif %}
                 {% if project.objectives %}{{ objectivesString }}{% endif %}
                 {% if project.topics %}<p><b>Topic{% if topics.size > 1 %}s{% endif %}:</b> {{ topicsString }}</p>{% endif %}
-                {% if project.notes %}<p><b>Notes:</b> {{ project.notes }}</p>{% endif %}
+                {% if project.notes %}{{ notesString }}{% endif %}
                 {% if project.references %}{{ referencesString }}{% endif %}
             </div>
         {% endfor %}
