--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,11 +30,12 @@
             </div>
 
             <div class="navbar-end">
-                {% if site.gh_sponsor %}
-                <a class="navbar-item" href="https://github.com/sponsors/{{ site.gh_sponsor }}">
-                    <span class="icon gh-sponsor"><i class="fas fa-heart"></i></span>
-                    <span>Sponsor</span>
-                </a>
+                {% if site.data.social %}
+                    {% for social in site.data.social %}
+                        <a class="navbar-item" href="{{ social.link }}">
+                            <span class="icon"><i class="fab fa-{{ social.icon }}"></i></span>
+                        </a>
+                    {% endfor %}
                 {% endif %}
             </div>
 
